welcome.lessons.welcome.array.array123.Array123.scala.error
array123:1: error: illegal start of simple expression
def array123(nums:Array[Int]): Boolean = var {
                                         ^